--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ label img {
         width: 600px;
         height: 200px;
         background-repeat: no-repeat;
-        margin: 0 0 15px 0;
+        margin: 15px;
     }
 
     #searchInput {
@@ -88,7 +88,7 @@ label img {
         width: 355px;
         height: 120px;
         background-repeat: no-repeat;
-        margin: 0 0 15px 0;
+        margin: 15px;
     }
 
     #searchInput {
