--- a/css/styles.css
+++ b/css/styles.css
@@ -1,114 +1,103 @@
 * {
     margin: 0;
-    transition: all 100ms ease-in-out;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    box-sizing: border-box;
+    padding: 0;
 }
 
-
-
-.ram {
+.rickandmortyContainer {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 15px;
+    justify-content: center;
 }
 
-label img {
+.logo {
     display: flex;
-    height: 27px;
-    width: 27px;
-    margin-left: 7px;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    margin: 0 0 25px 0;
+}
+.logo img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
-.item .text {
-    margin: 0 0 20px 10px;
-    font-size: 18px;
+.search {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 
-.item img {
-    width: 240px;
-    height: 240px;
+.input-search {
+    width: 60%;
+    padding: 0 40px;
+    height: 30px;
+    border: none;
+    border-radius: 7px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+    background-image: url("/imgs/EvaSearchFill.svg");
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: 4px;
+
+}
+
+.follower {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    border-radius: 100%;
+    pointer-events: none;
+    border: red 2px solid;
+    background: none;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+    transition: all 0.08s ease;
+}
+
+body.dark {
+    color: white;
+    background: dimgray;
+}
+
+.menuToggle {
+    float: right;
+    z-index: 998;
 }
 
 .item {
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+    right: -300px;
+    position: fixed;
+    background: white;
+    width: 300px;
+    height: 100%;
+    z-index: 999;
+    transition: right 2s ease-in-out;
 }
-/* 
-.items {
-    margin: 25px;
-    display: grid;
-    gap: 20px;
-    grid-template-columns: auto auto auto auto;
-} */
 
+.menu {
+    position: fixed;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+}
 
-@media only screen and (min-width: 1020px) {
-
-    .ram {
-        margin: 24px;
-    }
-
-    .logo img {
-        width: 600px;
-        height: 200px;
-        background-repeat: no-repeat;
-        margin: 45px;
-    }
-
-    #searchInput {
-        background: url(/imgs/searchl.png) no-repeat scroll 7px 7px;
-        display: flex;
-        background-size: 30px;
-        font-size: 16px;
-        height: 30px;
-        width: 1020px;
-        border: 1px solid #000;
-        border-radius: 4px;
-        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
-        padding: 22px 45px;
-    }
-
-    .items {
-        margin: 25px;
-        display: grid;
-        gap: 20px;
-        grid-template-columns: auto auto auto auto;
-    }
+.hidden {
+    display: none;
 
 }
 
-@media only screen and (max-width: 1020px) {
+/* Меню открыто */
+.side-menu.open {
+    right: 0; /* Меню выезжает вправо */
+}
 
-    .ram {
-        padding: 24px;
-    }
-
-    .logo img {
-        width: 355px;
-        height: 120px;
-        background-repeat: no-repeat;
-        margin: 45px;
-    }
-
-    #searchInput {
-        background: url(/imgs/searchl.png) no-repeat scroll 7px 7px;
-        display: flex;
-        background-size: 30px;
-        font-size: 16px;
-        height: 30px;
-        width: 312px;
-        border: 1px solid #000;
-        border-radius: 4px;
-        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
-        padding: 22px 45px;
-    }
-
-    .items {
-        margin: 25px;
-        display: grid;
-        gap: 20px;
-        grid-template-columns: auto ;
-    }
-
+/* Фон активен, когда меню открыто */
+.overlay.show {
+    display: block;
 }
